Improve memmory use and connect hvec